dongle-smartcontract/test_results_v15.txt
   Compiling dongle-contract v0.1.0 (C:\Users\user\Dongle-Smartcontract\dongle-smartcontract)
error[E0432]: unresolved import `crate::errors`
 --> src\lib.rs:1:12
  |
1 | use crate::errors::ContractError;
  |            ^^^^^^ could not find `errors` in the crate root

error[E0432]: unresolved import `crate::fee_manager`
 --> src\lib.rs:2:12
  |
2 | use crate::fee_manager::FeeManager;
  |            ^^^^^^^^^^^ could not find `fee_manager` in the crate root

error[E0432]: unresolved import `crate::project_registry`
 --> src\lib.rs:3:12
  |
3 | use crate::project_registry::ProjectRegistry;
  |            ^^^^^^^^^^^^^^^^ could not find `project_registry` in the crate root

error[E0432]: unresolved import `crate::review_registry`
 --> src\lib.rs:4:12
  |
4 | use crate::review_registry::ReviewRegistry;
  |            ^^^^^^^^^^^^^^^ could not find `review_registry` in the crate root

error[E0432]: unresolved import `crate::types`
 --> src\lib.rs:5:12
  |
5 | use crate::types::{
  |            ^^^^^ could not find `types` in the crate root

error[E0432]: unresolved import `crate::verification_registry`
 --> src\lib.rs:9:12
  |
9 | use crate::verification_registry::VerificationRegistry;
  |            ^^^^^^^^^^^^^^^^^^^^^ could not find `verification_registry` in the crate root

error[E0433]: failed to resolve: could not find `storage_keys` in the crate root
  --> src\lib.rs:19:48
   |
19 |         env.storage().persistent().set(&crate::storage_keys::StorageKey::Admin, &admin);
   |                                                ^^^^^^^^^^^^ could not find `storage_keys` in the crate root

error[E0432]: unresolved import `crate::errors`
 --> src\test.rs:3:12
  |
3 | use crate::errors::ContractError as Error;
  |            ^^^^^^ could not find `errors` in the crate root

error[E0432]: unresolved import `crate::types`
 --> src\test.rs:4:12
  |
4 | use crate::types::VerificationStatus;
  |            ^^^^^ could not find `types` in the crate root

error[E0432]: unresolved import `crate::errors`
 --> src\registration_tests.rs:3:12
  |
3 | use crate::errors::ContractError;
  |            ^^^^^^ could not find `errors` in the crate root

error[E0432]: unresolved import `crate::types`
 --> src\registration_tests.rs:4:12
  |
4 | use crate::types::ProjectRegistrationParams;
  |            ^^^^^ could not find `types` in the crate root

error[E0432]: unresolved import `crate::types`
 --> src\verification_tests.rs:5:16
  |
5 |     use crate::types::{VerificationStatus, ProjectRegistrationParams};
  |                ^^^^^ could not find `types` in the crate root

error[E0433]: failed to resolve: could not find `types` in the crate root
  --> src\test.rs:23:25
   |
23 |     let params = crate::types::ProjectRegistrationParams {
   |                         ^^^^^ could not find `types` in the crate root

error[E0433]: failed to resolve: could not find `types` in the crate root
   --> src\test.rs:438:29
    |
438 |         let params = crate::types::ProjectRegistrationParams {
    |                             ^^^^^ could not find `types` in the crate root

warning: unused import: `Vec`
 --> src\test.rs:8:58
  |
8 | use soroban_sdk::{Address, Env, String as SorobanString, Vec};
  |                                                          ^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
error: could not compile `dongle-contract` (lib) due to 7 previous errors
warning: build failed, waiting for other jobs to finish...
warning: `dongle-contract` (lib test) generated 1 warning
error: could not compile `dongle-contract` (lib test) due to 14 previous errors; 1 warning emitted
